# TEMAC

./: M_iccrts.rdata  M_iccrts_bibliometrix.rdata  M_ieee.rdata  M_wos.rdata  README.md  base_consolidada_para_triagem.xlsx  bibliometrix_Rmd.Rmd  main.py  pyproject.toml
.crossnote/: style.less
Analise_amostra_artigos/: ajustes_iniciais.ipynb
Artigos_DL_DLH_MD/: ranking_artigos.xlsx  todos_artigos_md.md
Estilo_Markdown/: estilo.css
IEEE_XPRES/: export2026.02.20-18.39.39.csv  export2026.02.20-18.39.57.csv  export2026.02.20-18.40.13.csv  export2026.02.20-18.41.22.csv  export2026.02.20-18.41.43.csv  export2026.02.20-18.42.07.csv  export2026.02.20-18.44.57.csv  export2026.02.20-18.46.06.csv  export2026.02.20-18.47.55.csv
Resultados_biblioshiny/: relatorio_bibliometrico_temac.md
SCOPUS/: scopus_export_Feb 20-2026_2363e749-3da8-4dba-abf0-9172284f86f1.csv  scopus_export_Feb 20-2026_47d165b8-ec88-408e-8558-0f005b48f92a.csv  scopus_export_Feb 20-2026_483fdb37-42c8-47f3-868a-94921f684d24.csv  scopus_export_Feb 20-2026_72bbd9f4-7244-457b-a0f8-1190cdaf7191.csv  scopus_export_Feb 20-2026_a9d07339-59f8-4e4c-b0e7-7d7eccaa9347.csv
WOS/: savedrecs (1).txt  savedrecs (10).txt  savedrecs (11).txt  savedrecs (12).txt  savedrecs (2).txt  savedrecs (3).txt  savedrecs (4).txt  savedrecs (5).txt  savedrecs (6).txt  savedrecs (7).txt  savedrecs (8).txt  savedrecs (9).txt  savedrecs.txt
ajustes_BD/: ajustes_IEEE.ipynb  ajustes_SCOPUS.ipynb  ajustes_WoS.ipynb
ajustes_texto_solicitado/: Revisão Acadêmica de Arquivo Markdown.md  ajuste_nr1.md  informacoes_necessarias.md  (+1 more)
(+93 files in other folders)
