[project]
name = "temac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google>=3.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
]
